[metadata]
name = dwave-utils
version = 0.0.1
author = Costantino Carugno
author_email = costantino.carugno@polimi.it
description = Utilities for D-Wave quantum computers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quosta/dwave-utils
project_urls =
    Bug Tracker = https://github.com/quosta/dwave-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    dimod >= 0.10.7
[options.packages.find]
where = src 
